--- a/INSTALL
+++ b/INSTALL
@@ -16,7 +16,7 @@ To run aatk (the arctic-antarctic toolkit), you will need
 	- these pip packages :
 		netcdf4
 			you may need the following flags
-			pip install --user --global-option=build_ext --global-option="-L/usr/include/hdf5/serial"
+			pip install --user --global-option=build_ext --global-option="-I/usr/include/hdf5/serial"
 		ecwmwf-api-client
 			recommended if you want to download from the ECMWF servers
 
@@ -49,8 +49,8 @@ Put the folder in your python path
 From there, python on :
 >>> from pylab import *
 >>> import aa
->>> f = aa.open('qv/201112.nc')
->>> f.mean('t').plot
+>>> f = aa.open('EXAMPLE.nc')
+>>> f.up.mean('t').plot
 (<matplotlib.collections.QuadMesh object at 0x7f6c2539eed0>, <matplotlib.colorbar.Colorbar instance at 0x7f6c254250e0>)
 >>> show()
 >>> 
